test/sema/negative/wrong_arg_num3.output
wrong_arg_num3.impala:2 col 4 - 13: error: Wrong number of arguments
